# KartRacing

./: README.md
client/: CMakeLists.txt  install.sh  run.sh
client/assets/: CMakeLists.txt
client/lib/: defines.h
client/src/: CMakeLists.txt  application.cpp  application.h  application.hpp  camera.cpp  camera.hpp  client.cpp  client.hpp  cubeMesh.cpp  cubeMesh.hpp  cubemap.cpp  cubemap.hpp  garage.cpp  garage.hpp  kart.cpp  kart.hpp  letter.cpp  letter.hpp  main.cpp  mesh.cpp  mesh.hpp  shader.cpp  shader.h  shader.hpp  speedway.cpp  speedway.hpp  texture.cpp  texture.hpp  userInterface.cpp  userInterface.hpp  window.cpp  window.h  window.hpp
client/src/helpers/: common.cpp  common.hpp  log.cpp
client/src/shaders/: CMakeLists.txt  main.frag.glsl  main.vert.glsl  sky.vert.glsl
server/: CMakeLists.txt  install.sh  run.sh
server/lib/: defines.hpp
server/src/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
server/src/helpers/: log.cpp  log.hpp
